test File and Exception