@@ -2,33 +2,36 @@ package Autoboxing;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import Exception.Main2;
 
 public class Main {
     public static void main(String[] args) {
-        Integer boxedInt = Integer.valueOf(15);
-        Integer deprecatedBoxing = new Integer(15);
-        int unboxedInt = boxedInt.intValue();
+        // Integer boxedInt = Integer.valueOf(15);
+        // Integer deprecatedBoxing = new Integer(15);
+        // int unboxedInt = boxedInt.intValue();
 
-        //Automatic
-        Integer autoBoxed = 15;
-        int autoUnboxed = autoBoxed;
-        System.out.println(autoBoxed.getClass().getName());
-        // System.out.println(autoUnboxed.getClass().getName());
+        // //Automatic
+        // Integer autoBoxed = 15;
+        // int autoUnboxed = autoBoxed;
+        // System.out.println(autoBoxed.getClass().getName());
+        // // System.out.println(autoUnboxed.getClass().getName());
     
-        Double resultBoxed = getLiteralDoublePrimitive();
-        double resultUnboxed = getDoubleObject();
+        // Double resultBoxed = getLiteralDoublePrimitive();
+        // double resultUnboxed = getDoubleObject();
 
-        Integer[] wrapperArray = new Integer[5];
-        wrapperArray[0] = 50;
-        System.out.println(Arrays.toString(wrapperArray));
+        // Integer[] wrapperArray = new Integer[5];
+        // wrapperArray[0] = 50;
+        // System.out.println(Arrays.toString(wrapperArray));
 
-        System.out.println(wrapperArray[0].getClass().getName());
+        // System.out.println(wrapperArray[0].getClass().getName());
 
-        Character[] characterArray = {'a','b','c','d'};
-        System.out.println(Arrays.toString(characterArray));
+        // Character[] characterArray = {'a','b','c','d'};
+        // System.out.println(Arrays.toString(characterArray));
     
-        var ourList = getList(1,2,3,4,5);
-        System.out.println(ourList);
+        // var ourList = getList(1,2,3,4,5);
+        // System.out.println(ourList);
+
+        
     }   
 
     private static ArrayList<Integer> getList(Integer... varargs){
